[gd_scene load_steps=9 format=3 uid="uid://cai68wbudkh12"]

[ext_resource type="Script" uid="uid://nw4s17rpcy8r" path="res://scenes/animal/animal.gd" id="1_4tqkp"]
[ext_resource type="Texture2D" uid="uid://bscs38skk11v5" path="res://assets/player/parrot.png" id="1_lwbc0"]
[ext_resource type="Texture2D" uid="uid://uhk5wbde2txx" path="res://assets/items/arrow.png" id="2_4tqkp"]
[ext_resource type="AudioStream" uid="uid://gceaykocstgc" path="res://assets/audio/stretch2.ogg" id="3_ic6m2"]
[ext_resource type="AudioStream" uid="uid://c3og031daevpq" path="res://assets/audio/catapult.ogg" id="4_wpis3"]
[ext_resource type="AudioStream" uid="uid://dyay1l0ru7tvv" path="res://assets/audio/kick_wood.ogg" id="5_jy2ng"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4tqkp"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_lwbc0"]
radius = 19.2354

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_4tqkp")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_4tqkp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Bird" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_lwbc0")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_4tqkp")
offset = Vector2(150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lwbc0")

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ic6m2")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wpis3")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jy2ng")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -112.0
offset_right = 274.0
offset_bottom = 20.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "eawwa"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_notifier_2d_screen_exited"]
